# boors_data_analysis

./: README.txt  analyze_transactions.py  convert_xlsx_files_to_csv_files.py  extract_transactions_xlsx_files.py  main.py  pyproject.toml
datalake/: 1401-03-01.xlsx  1401-03-02.xlsx  1401-03-03.xlsx  1401-03-04.xlsx  1401-03-07.xlsx  1401-03-08.xlsx  1401-03-09.xlsx  1401-03-10.xlsx  1401-11-01.xlsx  1401-11-02.xlsx  1401-11-03.xlsx  1401-11-04.xlsx  1401-11-05.xlsx
stage/: 1401-03-01.csv  1401-03-02.csv  1401-03-03.csv  1401-03-04.csv  1401-03-07.csv  1401-11-01.csv  1401-11-02.csv  1401-11-03.csv  1401-11-04.csv  1401-11-05.csv
